create and get players
